--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
@@ -29,8 +30,10 @@
     "react-dom": "^16.0.0",
     "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "sass-loader": "6.0.6",
     "style-loader": "^0.23.1",
+    "uuid": "^3.3.2",
     "validator": "^10.7.1"
   },
   "devDependencies": {
